--- a/cityBikeApp/cityBikeApp.csproj
+++ b/cityBikeApp/cityBikeApp.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="npgsql.entityframeworkcore.postgresql" Version="7.0.0" />
+    <PackageReference Include="Radzen.Blazor" Version="4.24.5" />
   </ItemGroup>
 
   <ItemGroup>
