--- a/cityBikeApp/appsettings.Development.json
+++ b/cityBikeApp/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=citybike;Username=academy;Password=academy"
   }
 }
