--- a/cityBikeApp/appsettings.json
+++ b/cityBikeApp/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=citybike;Username=academy;Password=academy"
+    "DefaultConnection": "Host=db;Database=citybike;Username=academy;Password=academy"
   },
   "AllowedHosts": "*"
 }
